--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
      <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <script src="JS/app.js"></script>
+    <h2 id="clock">00:00</h2>
+    <script src="JS/greeting.js"></script>
+    <script src="JS/clock.js"></script>
   </body>
 </html>
