make random quotes and background"

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00</h2>
     <div id="quote">
-     <span></span>
-     <span></span>
+      <span></span>
+      <span></span>
     </div>
-    <script src="JS/background.js"></script>
+    <scirpt src="JS/background.js"></scirpt>
     <script src="JS/greeting.js"></script>
     <script src="JS/clock.js"></script>
     <script src="JS/quotes.js"></script>
