cummit mistake shit
;ㅅ;

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <h2 id="clock">00:00</h2>
+    <div>
+      <span></span>
+      <span></span>
+    </div>
+    <script src="JS/background.js"></script>
+    <script src="JS/quotes.js"></script>
     <script src="JS/greeting.js"></script>
     <script src="JS/clock.js"></script>
   </body>
