--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Momentum</title>
   </head>
   <body>
+    <h2 id="clock">00:00</h2>
     <form id="login-form" class="hidden" >
      <input 
      required 
@@ -19,7 +20,10 @@
      <button>Log In</button>
     </form>
     <h1 id="greeting" class="hidden"></h1>
-    <h2 id="clock">00:00</h2>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter"/>
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
@@ -28,5 +32,6 @@
     <script src="JS/quote.js"></script>
     <script src="JS/greeting.js"></script>
     <script src="JS/clock.js"></script>
+    <script src="JS/todo.js"></script>
   </body>
 </html>
