--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Momentum</title>
   </head>
   <body>
-    <h2 id="clock">00:00</h2>
+   <div class="inner">
+    <header>
+     <h2 id="clock">00:00</h2>
+    </header>
     <form id="login-form" class="hidden" >
      <input 
      required 
@@ -21,17 +24,24 @@
     </form>
     <h1 id="greeting" class="hidden"></h1>
     <form id="todo-form">
-      <input type="text" placeholder="Write a To Do and Press Enter"/>
+      <input type="text" placeholder="Write a To Do,Press Enter"/>
     </form>
     <ul id="todo-list"></ul>
     <div id="quote">
       <span></span>
       <span></span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
+  </div>  
     <script src="JS/backgrounds.js"></script>
     <script src="JS/quote.js"></script>
     <script src="JS/greeting.js"></script>
     <script src="JS/clock.js"></script>
     <script src="JS/todo.js"></script>
+    <script src="Js/weather.js"></script>
+    <script src="JS/apikey.js"></script>
   </body>
 </html>
